# lamina

./: .gitignore  CMakeLists.txt  PHASE_3_PLAN.md  README.md  create-installer.sh
Source/: ADSRVisualizer.h  Envelope.h  Filter.h  GrainEngine.h  GrainVisualizer.h  GrainVoice.h  InteractiveADSREnvelope.h  LFO.h  LookupTables.h  ModulatedSlider.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StereoFieldVisualizer.h  UnifiedVisualization.h  WaveformDisplay.h
installer/: Somnia-component.pkg  distribution.xml  welcome.txt
installer-output/: Somnia-v1.0-macOS.pkg
installer/scripts/: postinstall
